--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,6 @@
             android:label="@string/title_activity_registration"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".LandingPageActivity"
-            android:label="@string/title_activity_landing_page"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".BookInputActivity"
             android:label="@string/title_activity_book_input"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -56,7 +52,16 @@
         <activity
             android:name=".SearchActivity"
             android:label="@string/title_activity_search"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LandingPage"
+            android:label="@string/title_activity_landing_page"
+            android:parentActivityName=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="sjsu.com.booktrade.LoginActivity" />
+        </activity>
     </application>
 
 </manifest>
