--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA"> </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -22,7 +23,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme.Dark"
+            android:theme="@style/AppTheme.Light"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +34,7 @@
         <activity
             android:name=".RegistrationActivity"
             android:label="@string/title_activity_registration"
-            android:theme="@style/AppTheme.Dark" />
+            android:theme="@style/AppTheme.Light" />
         <activity
             android:name=".BookInputActivity"
             android:label="@string/title_activity_book_input"
@@ -63,6 +64,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sjsu.com.booktrade.LoginActivity" />
         </activity>
+        <!--<activity-->
+            <!--android:name=".PostAd"-->
+            <!--android:label="title_activity_postad"-->
+            <!--android:theme="@style/AppTheme.Light" />-->
+
     </application>
 
 </manifest>
