--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'io.card:android-sdk:5.3.4'
+    compile 'info.hoang8f:fbutton:1.0.5'
+    compile 'com.github.ganfra:material-spinner:1.1.1'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'com.android.support:appcompat-v7:23.2.0'
+    compile('com.paypal.sdk:paypal-android-sdk:2.14.2')
     compile 'com.android.support:design:23.2.0'
     compile files('libs/httpclient-osgi-4.3.jar')
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
