--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -13,10 +14,26 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false"/>
+
+    <!-- for card.io card scanning -->
+    <uses-permission
+        android:name="android.permission.CAMERA"/>
+    <uses-permission
+        android:name="android.permission.VIBRATE"/>
+
+    <!-- for most things, including card.io & paypal -->
+    <uses-permission
+        android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/book_trade"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -63,6 +80,25 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sjsu.com.booktrade.LoginActivity" />
         </activity>
+        <service
+            android:name="com.paypal.android.sdk.payments.PayPalService"
+            android:exported="false"/>
+
+        <activity
+            android:name="com.paypal.android.sdk.payments.PaymentActivity"/>
+        <activity
+            android:name="com.paypal.android.sdk.payments.LoginActivity"/>
+        <activity
+            android:name="com.paypal.android.sdk.payments.PaymentMethodActivity"/>
+        <activity
+            android:name="com.paypal.android.sdk.payments.PaymentConfirmActivity"/>
+        <activity
+            android:name="com.paypal.android.sdk.payments.PaymentCompletedActivity"/>
+        <activity
+            android:name="io.card.payment.CardIOActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name="io.card.payment.DataEntryActivity"/>
     </application>
 
 </manifest>
