--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.google.code.gson:gson:2.6.2'
+
 }
